# online_library_api

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: aca5565cfdc6_fixed_book_tables.py  ad2b3b4b66cd_add_book_author_and_genre_tables.py  bd5ba2beec76_user_model.py  cf3df11ee344_nullable_description_book.py
scripts/: set_role.py
src/: config.py  main.py
src/auth/: dependencies.py  model.py  router.py  security.py
src/book/: model.py  router.py  schema.py  service.py
src/db/: database.py
src/user/: model.py  schema.py  service.py
uml/: class_diagram.puml  er_diagram.puml
