[project]
name = "libraryapi"
version = "1.0.0"
description = "Online Library API"
authors = [
    { name = "Nikita Dzhurynskyi", email = "nikitadzhurynskyi@gmail.com" }
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
